<resources>
    <string name="app_name">Calculator-rugema</string>
    <string name="clear">C</string>
    <string name="result">""</string>
    <string name="clear_all">CE</string>
    <string name="plus_minus_btn">+/-</string>
    <string name="division">/</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="plus_sign">+</string>
    <string name="number4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="minus">-</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="multiplication">*</string>
    <string name="number_0">0</string>
    <string name="dot_sign">.</string>
    <string name="equal_sign">=</string>
</resources>
