<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cofc.csci490.calculator_rugema.CalculatorMainActivity">

    <TextView
        android:layout_columnSpan="4"
        android:text="@string/result"
        android:layout_gravity="end"
        android:layout_height="55dp"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:textAlignment="textEnd"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_column="0"
        android:id="@+id/resultTextView"
        android:textSize="50sp" />

    <Button
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnClear" />

    <Button
        android:text="@string/clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnClearAll"
        android:textSize="25sp"
        tools:ignore="HardcodedText" />

    <Button
        android:text="@string/plus_minus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnPlusMinus" />

    <Button
        android:text="@string/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnDivButton" />

    <Button
        android:text="@string/number7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber7" />

    <Button
        android:text="@string/number8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber8" />

    <Button
        android:text="@string/number9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber9" />

    <Button
        android:text="@string/plus_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnPlus" />

    <Button
        android:text="@string/number4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber4" />

    <Button
        android:text="@string/number_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber5" />

    <Button
        android:text="@string/number_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber6" />

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnMinus" />

    <Button
        android:text="@string/number_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber1" />

    <Button
        android:text="@string/number_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber2" />

    <Button
        android:text="@string/number_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber3" />

    <Button
        android:text="@string/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnMultiplication" />

    <Button
        android:text="@string/number_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnNumber0" />

    <Button
        android:text="@string/dot_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:id="@+id/btnDecimalSign" />

    <Button
        android:text="@string/equal_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:id="@+id/btnEqual" />
</GridLayout>
